--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,3 +1,19 @@
 {
-  "Tasks23": "Hello"
+  "Worker": {
+    "Tasks": {
+      "Belgrade": {
+        "IsInfinite": true,
+        "ChunkSize": 5,
+        "Steps": "CheckAvailableDates",
+        "Schedule": {
+          "IsEnable": true,
+          "TimeShift": 1,
+          "StartTime": "00:00:00",
+          "StopTime": "23:59:00",
+          "WorkTime": "00:05:00",
+          "WorkDays": "mon,tue,wed,thu,fri"
+        }
+      }
+    }
+  }
 }
