Refactor worker configuration and add new task settings

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,3 +1,28 @@
 {
-  "Tasks23": "Hello"
+  "Worker": {
+    "Tasks": {
+      "Belgrade": {
+        "IsInfinite": true,
+        "ChunkSize": 5,
+        "Steps": "CheckAvailableDates",
+        "Schedule": {
+          "IsEnable": true,
+          "TimeShift": 1,
+          "WorkTime": "00:00:05",
+          "WorkDays": "mon,tue,wed,thu,fri"
+        }
+      },
+      "Vena": {
+        "IsInfinite": true,
+        "ChunkSize": 5,
+        "Steps": "CheckAvailableDates",
+        "Schedule": {
+          "IsEnable": true,
+          "TimeShift": 1,
+          "WorkTime": "00:00:02",
+          "WorkDays": "mon,tue,wed,thu,fri"
+        }
+      }
+    }
+  }
 }
