--- a/src/Worker.fsproj
+++ b/src/Worker.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="Domain.fs" />
     <Compile Include="Helpers.fs" />
     <Compile Include="Infrastructure.fs" />
+    <Compile Include="WorkerTasks.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
