Refactor task handling and add new schedule properties

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -14,7 +14,9 @@
           "IsEnable": true,
           "TimeShift": 1,
           "WorkTime": "00:00:05",
-          "WorkDays": "mon,tue,wed,thu,fri"
+          "WorkDays": "mon,tue,wed,thu,fri",
+          "StartWork": "2024-03-05 15:14:40",
+          "StopWork": "2024-03-05 17:15:00"
         }
       },
       "Vena": {
