--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -11,12 +11,13 @@
         "ChunkSize": 5,
         "Steps": "CheckAvailableDates",
         "Schedule": {
-          "IsEnable": true,
-          "TimeShift": 1,
-          "WorkTime": "00:00:05",
+          "IsEnabled": true,
+          "IsOnce": true,
+          // "StartWork": "2024-03-05 15:14:40",
+          // "StopWork": "2024-03-05 17:15:00",
           "WorkDays": "mon,tue,wed,thu,fri",
-          "StartWork": "2024-03-05 15:14:40",
-          "StopWork": "2024-03-05 17:15:00"
+          "Delay": "00:00:05",
+          "TimeShift": 1
         }
       },
       "Vena": {
@@ -24,10 +25,10 @@
         "ChunkSize": 5,
         "Steps": "CheckAvailableDates",
         "Schedule": {
-          "IsEnable": true,
-          "TimeShift": 1,
-          "WorkTime": "00:00:02",
-          "WorkDays": "mon,tue,wed,thu,fri"
+          "IsEnabled": false,
+          "WorkDays": "mon,tue,wed,thu,fri",
+          "Delay": "00:00:02",
+          "TimeShift": 1
         }
       }
     }
