Add TaskScheduler module and refactor code

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -25,7 +25,7 @@
         "ChunkSize": 5,
         "Steps": "CheckAvailableDates",
         "Schedule": {
-          "IsEnabled": false,
+          "IsEnabled": true,
           "WorkDays": "mon,tue,wed,thu,fri",
           "Delay": "00:00:02",
           "TimeShift": 1
