Refactor handleTaskStep and handleTaskSteps functions

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -9,7 +9,12 @@
       "Belgrade": {
         "IsInfinite": true,
         "ChunkSize": 5,
-        "Steps": "CheckAvailableDates",
+        "Steps": [
+          {
+            "Name": "CheckAvailableDates",
+            "Steps": []
+          }
+        ],
         "Schedule": {
           "IsEnabled": true,
           "IsOnce": true,
@@ -23,7 +28,12 @@
       "Vena": {
         "IsInfinite": true,
         "ChunkSize": 5,
-        "Steps": "CheckAvailableDates",
+        "Steps": [
+          {
+            "Name": "CheckAvailableDates",
+            "Steps": []
+          }
+        ],
         "Schedule": {
           "IsEnabled": true,
           "WorkDays": "mon,tue,wed,thu,fri",
