Add missing using statement and refactor handleTaskSteps function

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace"
+      "Default": "Information"
     }
   },
   "Worker": {
@@ -11,8 +11,26 @@
         "ChunkSize": 5,
         "Steps": [
           {
-            "Name": "CheckAvailableDates",
-            "Steps": []
+            "Name": "GetAvailableDates_1",
+            "Steps": [
+              {
+                "Name": "GetAvailableDates_1.1",
+                "Steps": [
+                  {
+                    "Name": "GetAvailableDates_1.1.1",
+                    "Steps": []
+                  },
+                  {
+                    "Name": "GetAvailableDates_1.1.2",
+                    "Steps": []
+                  }
+                ]
+              },
+              {
+                "Name": "GetAvailableDates_1.2",
+                "Steps": []
+              }
+            ]
           }
         ],
         "Schedule": {
