Refactor project structure and fix appsettings.json

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -33,7 +33,7 @@
             ]
           }
         ],
-        "Schedule": {
+        "Scheduler": {
           "IsEnabled": true,
           "IsOnce": true,
           // "StartWork": "2024-03-05 15:14:40",
@@ -52,7 +52,7 @@
             "Steps": []
           }
         ],
-        "Schedule": {
+        "Scheduler": {
           "IsEnabled": true,
           "WorkDays": "mon,tue,wed,thu,fri",
           "Delay": "00:00:02",
