Add new task and steps

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,36 +1,45 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Trace"
     }
   },
   "Worker": {
     "Tasks": {
-      "Belgrade": {
+      "Task_1": {
         "IsInfinite": true,
         "ChunkSize": 5,
         "Steps": [
           {
-            "Name": "GetAvailableDates_1",
+            "Name": "Step_1",
             "Steps": [
               {
-                "Name": "GetAvailableDates_1.1",
+                "Name": "Step_1.1",
                 "Steps": [
                   {
-                    "Name": "GetAvailableDates_1.1.1",
+                    "Name": "Step_1.1.1",
                     "Steps": []
                   },
                   {
-                    "Name": "GetAvailableDates_1.1.2",
+                    "Name": "Step_1.1.2",
                     "Steps": []
                   }
                 ]
               },
               {
-                "Name": "GetAvailableDates_1.2",
-                "Steps": []
+                "Name": "Step_1.2",
+                "Steps": [
+                  {
+                    "Name": "Step_1.2.1",
+                    "Steps": []
+                  }
+                ]
               }
             ]
+          },
+          {
+            "Name": "Steps_2",
+            "Steps": []
           }
         ],
         "Scheduler": {
@@ -43,17 +52,26 @@
           "TimeShift": 1
         }
       },
-      "Vena": {
+      "Task_2": {
         "IsInfinite": true,
         "ChunkSize": 5,
         "Steps": [
           {
-            "Name": "CheckAvailableDates",
+            "Name": "Step_1",
+            "Steps": []
+          },
+          {
+            "Name": "Step_2",
+            "Steps": []
+          },
+          {
+            "Name": "Step_3",
             "Steps": []
           }
         ],
         "Scheduler": {
           "IsEnabled": true,
+          "IsOnce": true,
           "WorkDays": "mon,tue,wed,thu,fri",
           "Delay": "00:00:02",
           "TimeShift": 1
