--- a/src/Worker.fsproj
+++ b/src/Worker.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="Domain.fs" />
     <Compile Include="Infrastructure.fs" />
     <Compile Include="StepHandlers.fs" />
+    <Compile Include="Scheduler.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
