Update appsettings.json and Logging.fs

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -44,7 +44,7 @@
         ],
         "Scheduler": {
           "IsEnabled": true,
-          "IsOnce": true,
+          "IsOnce": false,
           // "StartWork": "2024-03-05 15:14:40",
           // "StopWork": "2024-03-05 17:15:00",
           "WorkDays": "mon,tue,wed,thu,fri",
@@ -71,7 +71,7 @@
         ],
         "Scheduler": {
           "IsEnabled": true,
-          "IsOnce": true,
+          "IsOnce": false,
           "WorkDays": "mon,tue,wed,thu,fri",
           "Delay": "00:00:02",
           "TimeShift": 1
