Refactor DSL and StepHandlers modules

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,69 +6,59 @@
   },
   "Worker": {
     "Tasks": {
-      "Task_1": {
+      "AskBelgrade": {
         "ChunkSize": 5,
         "Steps": [
           {
-            "Name": "Step_11",
+            "Name": "GetAvaliableDates",
             "Steps": [
               {
-                "Name": "Step_1.1",
-                "Steps": [
-                  {
-                    "Name": "Step_1.1.1",
-                    "Steps": []
-                  },
-                  {
-                    "Name": "Step_1.1.2",
-                    "Steps": []
-                  }
-                ]
+                "Name": "RequestToKdmid",
+                "Steps": []
               },
               {
-                "Name": "Step_1.2",
-                "Steps": [
-                  {
-                    "Name": "Step_1.2.1",
-                    "Steps": []
-                  }
-                ]
+                "Name": "RequestToExternal",
+                "Steps": []
               }
             ]
           },
           {
-            "Name": "Steps_2",
+            "Name": "SendAvaliableDates",
             "Steps": []
           }
         ],
         "Scheduler": {
           "IsEnabled": true,
           "IsOnce": false,
-          // "StartWork": "2024-03-05 15:14:40",
-          // "StopWork": "2024-03-05 17:15:00",
+          "StartWork": "",
+          "StopWork": "",
           "WorkDays": "mon,tue,wed,thu,fri",
           "Delay": "00:00:05",
           "TimeShift": 1
         }
       },
-      "Task_2": {
+      "ParseReports": {
         "ChunkSize": 5,
         "Steps": [
           {
-            "Name": "Step_1",
+            "Name": "GetReports",
             "Steps": []
           },
           {
-            "Name": "Step_2",
+            "Name": "PrepareReports",
             "Steps": []
           },
           {
-            "Name": "Step_3",
+            "Name": "ParsePreparedReports",
+            "Steps": []
+          },
+          {
+            "Name": "SendParsedReports",
             "Steps": []
           }
         ],
         "Scheduler": {
-          "IsEnabled": true,
+          "IsEnabled": false,
           "IsOnce": false,
           "WorkDays": "mon,tue,wed,thu,fri",
           "Delay": "00:00:02",
