--- a/src/Worker.fsproj
+++ b/src/Worker.fsproj
@@ -11,7 +11,8 @@
     <Compile Include="Domain.fs" />
     <Compile Include="./infrastructure/Configuration.fs" />
     <Compile Include="./infrastructure/Logging.fs" />
-    <Compile Include="StepHandlers.fs" />
+    <Compile Include="./infrastructure/Persistence.fs" />
+    <Compile Include="./thirdparty/StepHandlers.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
