Refactor logging module and update step names

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -13,11 +13,11 @@
             "Name": "GetAvaliableDates",
             "Steps": [
               {
-                "Name": "RequestToKdmid",
+                "Name": "GetAvaliableDates.RequestToKdmid",
                 "Steps": []
               },
               {
-                "Name": "RequestToExternal",
+                "Name": "GetAvaliableDates.RequestToExternal",
                 "Steps": []
               }
             ]
