--- a/src/Worker.fsproj
+++ b/src/Worker.fsproj
@@ -9,9 +9,15 @@
     </Content>
     <Compile Include="DSL.fs" />
     <Compile Include="Domain.fs" />
+    <Compile Include="Serialization.fs" />
+    <Compile Include="Mapper.fs" />
     <Compile Include="./infrastructure/Configuration.fs" />
     <Compile Include="./infrastructure/Logging.fs" />
-    <Compile Include="./infrastructure/Persistence.fs" />
+    <Compile Include="./infrastructure/persistence/Persistence.fs" />
+    <Compile Include="./infrastructure/persistence/storages/FileStorage.fs" />
+    <Compile Include="./infrastructure/persistence/storages/InMemoryStorage.fs" />
+    <Compile Include="./infrastructure/persistence/storages/SettingsStorage.fs" />
+    <Compile Include="./infrastructure/persistence/Repository.fs" />
     <Compile Include="./thirdparty/StepHandlers.fs" />
     <Compile Include="Core.fs" />
     <Compile Include="Program.fs" />
