Refactor Serialization module in src/Serialization.fs to remove unused code

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,24 +6,25 @@
   },
   "Worker": {
     "Tasks": {
-      "AskBelgrade": {
-        "ChunkSize": 5,
+      "ExternalTask": {
         "Steps": [
           {
-            "Name": "GetAvaliableDates",
+            "Name": "Step_1",
+            "IsParallel": true,
             "Steps": [
               {
-                "Name": "GetAvaliableDates.RequestToKdmid",
+                "Name": "Step_1_1",
                 "Steps": []
               },
               {
-                "Name": "GetAvaliableDates.RequestToExternal",
+                "Name": "Step_1_2",
                 "Steps": []
               }
             ]
           },
           {
-            "Name": "SendAvaliableDates",
+            "Name": "Step_2",
+            "IsParallel": true,
             "Steps": []
           }
         ],
@@ -34,34 +35,6 @@
           "StopWork": "",
           "WorkDays": "mon,tue,wed,thu,fri",
           "Delay": "00:00:05",
-          "TimeShift": 1
-        }
-      },
-      "ParseReports": {
-        "ChunkSize": 5,
-        "Steps": [
-          {
-            "Name": "GetReports",
-            "Steps": []
-          },
-          {
-            "Name": "PrepareReports",
-            "Steps": []
-          },
-          {
-            "Name": "ParsePreparedReports",
-            "Steps": []
-          },
-          {
-            "Name": "SendParsedReports",
-            "Steps": []
-          }
-        ],
-        "Scheduler": {
-          "IsEnabled": false,
-          "IsOnce": false,
-          "WorkDays": "mon,tue,wed,thu,fri",
-          "Delay": "00:00:02",
           "TimeShift": 1
         }
       }
