--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -26,6 +26,20 @@
             "Name": "Step_2",
             "IsParallel": true,
             "Steps": []
+          },
+          {
+            "Name": "Step_3",
+            "IsParallel": false,
+            "Steps": [
+              {
+                "Name": "Step_3_1",
+                "Steps": []
+              },
+              {
+                "Name": "Step_3_2",
+                "Steps": []
+              }
+            ]
           }
         ],
         "Scheduler": {
