--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -4,20 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="DSL.fs" />
     <Compile Include="Domain.fs" />
-    <Compile Include="./infrastructure/Configuration.fs" />
-    <Compile Include="./infrastructure/Logging.fs" />
-    <Compile Include="./infrastructure/persistence/storages/FileStorage.fs" />
-    <Compile Include="./infrastructure/persistence/storages/InMemoryStorage.fs" />
-    <Compile Include="./infrastructure/persistence/storages/ConfigurationStorage.fs" />
-    <Compile Include="./infrastructure/persistence/Persistence.fs" />
-    <Compile Include="./infrastructure/persistence/Repository.fs" />
+    <Compile Include="Converter.fs" />
+    <Compile Include="Scheduler.fs" />
     <Compile Include="Core.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\fsharp-infrastructure\src\fsharp-infrastructure.fsproj" />
