--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Domain.fs" />
+    <Compile Include="Logging.fs" />
     <Compile Include="Converter.fs" />
     <Compile Include="Scheduler.fs" />
     <Compile Include="Core.fs" />
