--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <Compile Include="Domain.fs" />
     <Compile Include="Logging.fs" />
-    <Compile Include="Converter.fs" />
+    <Compile Include="Mapper.fs" />
     <Compile Include="Scheduler.fs" />
     <Compile Include="Core.fs" />
   </ItemGroup>
