--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Domain.fs" />
-    <Compile Include="Mapper.fs" />
+    <Compile Include="Graph.fs" />
     <Compile Include="Scheduler.fs" />
     <Compile Include="Core.fs" />
   </ItemGroup>
