--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -4,11 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <None Include=".gitignore" />
+    <None Include="README.md" />
     <Compile Include="Domain.fs" />
     <Compile Include="Graph.fs" />
     <Compile Include="Scheduler.fs" />
     <Compile Include="Core.fs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\fsharp-infrastructure\src\fsharp-infrastructure.fsproj" />
   </ItemGroup>
