--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -1,16 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup>
-    <Compile Include="Domain.fs" />
-    <Compile Include="Graph.fs" />
-    <Compile Include="Scheduler.fs" />
-    <Compile Include="Core.fs" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <ProjectReference Include="..\..\fsharp-infrastructure\src\fsharp-infrastructure.fsproj" />
-  </ItemGroup>
+    <PropertyGroup>
+        <OutputType>Library</OutputType>
+        <TargetFramework>net9.0</TargetFramework>
+    </PropertyGroup>
+    <ItemGroup>
+        <Compile Include="domain\Domain.Schedule.fs"/>
+        <Compile Include="domain\Domain.Scheduler.fs" />
+        <Compile Include="domain\Domain.WorkerTask.fs" />
+        <Compile Include="domain\Domain.TaskGraph.fs"/>
+        <Compile Include="domain\Domain.WorkerTaskResult.fs" />
+        <Compile Include="data_access\DataAccess.Schedule.fs" />
+        <Compile Include="data_access\DataAccess.TaskGraph.fs"/>
+        <Compile Include="Domain.fs"/>
+        <Compile Include="Graph.fs"/>
+        <Compile Include="Scheduler.fs"/>
+        <Compile Include="Core.fs"/>
+    </ItemGroup>
+    <ItemGroup/>
+    <ItemGroup>
+        <ProjectReference Include="..\..\fsharp-infrastructure\src\fsharp-infrastructure.fsproj"/>
+    </ItemGroup>
 </Project>
