--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -7,17 +7,19 @@
         <Compile Include="domain\Domain.Schedule.fs"/>
         <Compile Include="domain\Domain.Scheduler.fs" />
         <Compile Include="domain\Domain.WorkerTask.fs" />
-        <Compile Include="domain\Domain.TaskGraph.fs"/>
         <Compile Include="domain\Domain.WorkerTaskResult.fs" />
+        <Compile Include="domain\Domain.TaskGraph.fs" />
+        <Compile Include="domain\Domain.TaskGraphHandler.fs" />
+        <Compile Include="domain\Domain.WorkerConfiguration.fs" />
+        <Compile Include="domain\Domain.Dependencies.fs" />
         <Compile Include="data_access\DataAccess.Schedule.fs" />
-        <Compile Include="data_access\DataAccess.TaskGraph.fs"/>
-        <Compile Include="Domain.fs"/>
-        <Compile Include="Graph.fs"/>
+        <Compile Include="data_access\DataAccess.TaskGraph.fs" />
         <Compile Include="Scheduler.fs"/>
         <Compile Include="Core.fs"/>
     </ItemGroup>
     <ItemGroup/>
     <ItemGroup>
         <ProjectReference Include="..\..\fsharp-infrastructure\src\fsharp-infrastructure.fsproj"/>
+        <ProjectReference Include="..\..\fsharp-persistence\src\fsharp-persistence.fsproj" />
     </ItemGroup>
 </Project>
