--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -4,16 +4,16 @@
         <TargetFramework>net9.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="domain\Domain.Schedule.fs"/>
-        <Compile Include="domain\Domain.Scheduler.fs" />
-        <Compile Include="domain\Domain.WorkerTask.fs" />
-        <Compile Include="domain\Domain.WorkerTaskResult.fs" />
-        <Compile Include="domain\Domain.TaskGraph.fs" />
-        <Compile Include="domain\Domain.TaskGraphHandler.fs" />
-        <Compile Include="domain\Domain.WorkerConfiguration.fs" />
-        <Compile Include="domain\Domain.Dependencies.fs" />
-        <Compile Include="data_access\DataAccess.Schedule.fs" />
-        <Compile Include="data_access\DataAccess.TaskGraph.fs" />
+        <Compile Include="domain\Schedule.fs" />
+        <Compile Include="domain\Scheduler.fs" />
+        <Compile Include="domain\WorkerTask.fs" />
+        <Compile Include="domain\WorkerTaskResult.fs" />
+        <Compile Include="domain\TaskGraph.fs" />
+        <Compile Include="domain\TaskGraphHandler.fs" />
+        <Compile Include="domain\WorkerConfiguration.fs" />
+        <Compile Include="domain\Dependencies.fs" />
+        <Compile Include="data_access\Schedule.fs" />
+        <Compile Include="data_access\TaskGraph.fs" />
         <Compile Include="Scheduler.fs"/>
         <Compile Include="Core.fs"/>
     </ItemGroup>
