--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -16,7 +16,7 @@
         <Compile Include="dependencies\WorkerTaskNode.fs" />
         <Compile Include="dependencies\FireAndForget.fs" />
         <Compile Include="Scheduler.fs"/>
-        <Compile Include="Core.fs"/>
+        <Compile Include="Worker.fs" />
     </ItemGroup>
     <ItemGroup/>
     <ItemGroup>
