Enable nullable reference types for improved type safety and code quality

--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <OutputType>Library</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="domain\Schedule.fs" />
