Refactor worker dependencies: rename and restructure task handling for improved clarity and maintainability

--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -11,11 +11,9 @@
         <Compile Include="domain\ActiveTask.fs" />
         <Compile Include="domain\WorkerTask.fs" />
         <Compile Include="domain\WorkerTaskHandler.fs" />
-        <Compile Include="domain\WorkerConfiguration.fs" />
         <Compile Include="data_access\Schedule.fs" />
         <Compile Include="data_access\TaskGraph.fs" />
-        <Compile Include="dependencies\WorkerTask.fs" />
-        <Compile Include="dependencies\FireAndForget.fs" />
+        <Compile Include="dependencies\Dependencies.fs" />
         <Compile Include="Scheduler.fs"/>
         <Compile Include="Client.fs" />
     </ItemGroup>
