Refactor: Add project files for tests and enhance scheduler logging

--- a/src/fsharp-worker.fsproj
+++ b/src/fsharp-worker.fsproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\..\fsharp-infrastructure\src\fsharp-infrastructure.fsproj" />
     <ProjectReference Include="..\..\fsharp-persistence\src\fsharp-persistence.fsproj" />
   </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>fsharp-worker.tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
