--- a/tests/fsharp-worker.tests.fsproj
+++ b/tests/fsharp-worker.tests.fsproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Include="SchedulerTests.fs" />
+    <Compile Include="ClientTests.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
